@@ -46,14 +46,13 @@ class ScriptElement(buildstream.ScriptElement):
 
     def configure(self, node):
         for n in node.get_sequence("layout", []):
-            dst = self.node_subst_vars(n.get_scalar("destination"))
-            elm = self.node_subst_vars(n.get_scalar("element", None))
+            dst = n.get_str("destination")
+            elm = n.get_str("element", None)
             self.layout_add(elm, dst)
 
         node.validate_keys(["commands", "root-read-only", "layout"])
 
-        cmds = self.node_subst_sequence_vars(node.get_sequence("commands"))
-        self.add_commands("commands", cmds)
+        self.add_commands("commands", node.get_str_list("commands"))
 
         self.set_work_dir()
         self.set_install_root()
